k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lakicraft-backend-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lakicraft-backend
  template:
    metadata:
      labels:
        app: lakicraft-backend
    spec:
      containers:
        - name: backend
          image: matysz21/lakicraft-backend:latest
          ports:
            - containerPort: 8080
