k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lakicraft-frontend-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lakicraft-frontend
  template:
    metadata:
      labels:
        app: lakicraft-frontend
    spec:
      containers:
        - name: frontend
          image: matysz21/lakicraft-frontend:latest
          ports:
            - containerPort: 80
