k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lakicraft-postgres-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lakicraft-postgres
  template:
    metadata:
      labels:
        app: lakicraft-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
