k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lakicraft-app-backend
  namespace: default
spec:
  selector:
    app: lakicraft-backend
  ports:
    - name: port-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
