k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lakicraft-backend-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lakicraft-backend
  template:
    metadata:
      labels:
        app: lakicraft-backend
    spec:
      containers:
        - name: backend
          image: matysz21/lakicraft-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lakicraft-app-backend
  namespace: default
spec:
  selector:
    app: lakicraft-backend
  ports:
    - name: port-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: port-80
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
