k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lakicraft-frontend-service
  namespace: default
spec:
  selector:
    app: lakicraft-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
