k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lakicraft-frontend-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lakicraft-frontend
  template:
    metadata:
      labels:
        app: lakicraft-frontend
    spec:
      containers:
        - name: frontend
          image: matysz21/lakicraft-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lakicraft-frontend-service
  namespace: default
spec:
  selector:
    app: lakicraft-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
