k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lakicraft-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Usunęliśmy reguły regex, bo używamy czystego dopasowania prefiksów (Prefix match)
spec:
  rules:
    - http:
        paths:
          # REGUŁA 1: Wszystko, co zaczyna się od /api, leci w nienaruszonej formie do Spring Boota
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lakicraft-backend-service
                port:
                  number: 8080

          # REGUŁA 2: Cała reszta ruchu (główna strona, pliki js, css) leci do Reacta
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lakicraft-frontend-service
                port:
                  number: 80
